more data refactor scraper/login additional work on dataPrep.py and visualize.py

--- a/Scraper/login.yaml
+++ b/Scraper/login.yaml
@@ -1,3 +1,12 @@
-strava_user:
-    email: "jedicavebros@gmail.com"
-    password: "secrldrasterls1"
+jedicavebros0000:
+  email: jedicavebros@gmail.com
+  lastmaxed: 1634704756.3000295
+  password: secrldrasterls1
+jedicavebros0001:
+  email: jedicavebros0001@gmail.com
+  lastmaxed: 1634706640.355676
+  password: secrldrasterls1
+jedicavebros0002:
+  email: jedicavebros0002@gmail.com
+  lastmaxed: 1634706967.8693378
+  password: secrldrasterls1
