--- a/Scraper/login.yaml
+++ b/Scraper/login.yaml
@@ -1,20 +1,20 @@
 jedicavebros0000:
   email: jedicavebros@gmail.com
-  lastmaxed: 1635195178.6899624
-  password: secrldrasterls1
+  lastmaxed: 0.6899624
+  password: secrldrasterls2
 jedicavebros0001:
   email: jedicavebros0001@gmail.com
-  lastmaxed: 0.3657396
-  password: secrldrasterls1
+  lastmaxed: 0.019982
+  password: secrldrasterls2
 jedicavebros0002:
   email: jedicavebros0002@gmail.com
   lastmaxed: 0.5013707
-  password: secrldrasterls1
+  password: secrldrasterls2
 jedicavebros0003:
   email: jedicavebros0003@gmail.com
   lastmaxed: 0.1211932
-  password: secrldrasterls1
+  password: secrldrasterls2
 jedicavebros0004:
   email: jedicavebros0004@gmail.com
   lastmaxed: 0.094457
-  password: secrldrasterls1
+  password: secrldrasterls2
